--- a/index_Alfredo_24293.html
+++ b/index_Alfredo_24293.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análisis de Sistemas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
     <header>
@@ -47,6 +47,7 @@
             <div class="container text-center">
                 <h2 class="mb-4">Temas</h2>
                 <p>Aquí incluye información relevante sobre los temas relacionados con el análisis de sistemas.</p>
+                <p class="Seccion">El análisis es una parte fundamental en cualquier desarrollo. Nos permite identificar las necesidades de un problema y establecer soluciones mas eficaces.</p>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4">
