:poo: Se agregaron temas

--- a/index_alberto_2011175.html
+++ b/index_alberto_2011175.html
@@ -45,30 +45,30 @@
 
         <section id="temas" class="py-5">
             <div class="container text-center">
-                <h2 class="mb-4">Temas</h2>
+                <h2 class="mb-4">Importancia del analisis en sistemas</h2>
                 <p>Aquí incluye información relevante sobre los temas relacionados con el análisis de sistemas.</p>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Tema 1</h5>
-                                <p class="card-text">Descripción del tema 1.</p>
+                                <h5 class="card-title">Diseño Eficaz</h5>
+                                <p class="card-text">Permite a los profesionales planificar, diseñar y desarrollar sistemas de software de manera estructurada y efectiva, asegurando que cumplan con los requisitos y necesidades del usuario.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Tema 2</h5>
-                                <p class="card-text">Descripción del tema 2.</p>
+                                <h5 class="card-title">Comunicación Efectiva</h5>
+                                <p class="card-text">Fomenta la comunicación entre equipos técnicos y no técnicos, permitiendo una colaboración más efectiva y garantizando que todos comprendan el proceso de desarrollo.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Tema 3</h5>
-                                <p class="card-text">Descripción del tema 3.</p>
+                                <h5 class="card-title">Resolución de Problemas</h5>
+                                <p class="card-text">Desarrolla habilidades para identificar y resolver problemas en sistemas existentes, optimizando su funcionamiento y adaptándolos a nuevas necesidades.</p>
                             </div>
                         </div>
                     </div>
