:sparkles: cambios realizados

--- a/index_stephany_10798.html
+++ b/index_stephany_10798.html
@@ -46,54 +46,57 @@
         <section id="temas" class="py-5">
             <div class="container text-center">
                 <h2 class="mb-4">Temas</h2>
-                <p>Aquí incluye información relevante sobre los temas relacionados con el análisis de sistemas.</p>
+                <p>El análisis de sistemas es una disciplina fundamental en la tecnología de la información y en la gestión empresarial. Se refiere al proceso de examinar y comprender las necesidades, problemas y objetivos de un sistema, con el fin de diseñar soluciones eficientes y efectivas que satisfagan esas necesidades. Aquí hay algunas razones clave por las cuales el análisis de sistemas es importante:</p>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Tema 1</h5>
-                                <p class="card-text">Descripción del tema 1.</p>
+                                <h5 class="card-title">Identificacion de requerimientos</h5>
+                                <p class="card-text">El análisis de sistemas permite identificar de manera precisa y exhaustiva los requerimientos del sistema, incluyendo funciones, características, restricciones y objetivos.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Tema 2</h5>
-                                <p class="card-text">Descripción del tema 2.</p>
+                                <h5 class="card-title">Diseño Eficiente</h5>
+                                <p class="card-text">Un análisis exhaustivo de los procesos y flujos de trabajo existentes ayuda a identificar ineficiencias y cuellos de botella en los sistemas.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Tema 3</h5>
-                                <p class="card-text">Descripción del tema 3.</p>
+                                <h5 class="card-title">Optimizacion de recursos </h5>
+                                <p class="card-text">Al analizar sistemas existentes, se pueden identificar recursos subutilizados o redundantes. Esto permite una mejor asignación de recursos, reduciendo costos innecesarios y optimizando el rendimiento general.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
+    
         <section id="ejemplos" class="py-5 bg-light">
             <div class="container text-center">
                 <h2 class="mb-4">Ejemplos</h2>
-                <p>Agrega ejemplos prácticos o casos de estudio para ilustrar el análisis de sistemas en acción.</p>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Ejemplo 1</h5>
-                                <p class="card-text">Descripción del ejemplo 1.</p>
+                                <h5 class="card-title">Análisis de Sistemas de Información</h5>
+                                <p class="card-text">Análisis de bases de datos: Diseño y optimización de bases de datos para almacenar y acceder a la información de manera eficiente.
+                                    Análisis de seguridad de la información: Evaluación de la seguridad de los sistemas de información para identificar posibles vulnerabilidades y desarrollar medidas de protección.
+                               </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Ejemplo 2</h5>
-                                <p class="card-text">Descripción del ejemplo 2.</p>
+                                <h5 class="card-title">Análisis de Sistemas Empresariales</h5>
+                                <p class="card-text">Análisis de procesos de negocio: Identificación y optimización de los flujos de trabajo dentro de una empresa para mejorar la eficiencia y la calidad
+                                    Análisis de requerimientos: Identificación de las necesidades y expectativas de los usuarios para desarrollar sistemas de software que satisfagan sus necesidades.
+                                </p>
                             </div>
                         </div>
                     </div>
