realizando los cambios en el repo local 💡

--- a/index_Pablo_16344.html
+++ b/index_Pablo_16344.html
@@ -51,8 +51,8 @@
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Tema 1</h5>
-                                <p class="card-text">Descripción del tema 1.</p>
+                                <h5 class="card-title">La importancia del analisis.</h5>
+                                <p class="card-text">El análisis de sistemas ayuda a comprender las necesidades y requisitos de los usuarios y las partes interesadas.</p>
                             </div>
                         </div>
                     </div>
