:bug: Se corregieron detalles

--- a/index_alberto_2011175.html
+++ b/index_alberto_2011175.html
@@ -67,7 +67,7 @@
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Resolución de Problemas</h5>
+                                <h5 class="card-title">Resolución de Problemas:</h5>
                                 <p class="card-text">Desarrolla habilidades para identificar y resolver problemas en sistemas existentes, optimizando su funcionamiento y adaptándolos a nuevas necesidades.</p>
                             </div>
                         </div>
