:rocket: Se agrego un tema

--- a/index_Juan_6502.html
+++ b/index_Juan_6502.html
@@ -72,6 +72,19 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Importancia del analisis</h5>
+                                <p class="card-text">El analisis de muy importante en el desarrollo de software ya que permite identificar el problema y las necesidades
+                                    del cliente para poder brindarle una solucion que satisfaga dichas necesidades.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </section>
