--- a/index_Juan_6502.html
+++ b/index_Juan_6502.html
@@ -144,7 +144,7 @@
     <footer class="bg-dark text-white py-3">
         <div class="container text-center">
             <p>Todos los derechos reservados &copy; 2023 Análisis de Sistemas</p>
-            <p>Juan Estuardo Torres I</p>
+            <p>Juan Estuardo Torres Ibarra</p>
             <p>jtorresi1@miumg.edu.gt</p>
         </div>
     </footer>
