--- a/index_MiltonJeronimo_9044.html
+++ b/index_MiltonJeronimo_9044.html
@@ -46,7 +46,7 @@
         <section id="temas" class="py-5">
             <div class="container text-center">
                 <h2 class="mb-4">Temas</h2>
-                <p>Aquí incluye información relevante sobre los temas relacionados con el análisis de sistemas.</p>
+                <p>realizado por milton jeronimo aca se modifico el pie de paginagit.</p>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4">
